<?xml version="1.0"?>
<package format="2">
  <name>toposens</name>
  <version>0.9.2</version>
  <description>ROS support for Toposens 3D Ultrasound sensors.</description>

  <maintainer email="singh@toposens.com">Adi Singh</maintainer>
  <author email="dengler@toposens.com">Sebastian Dengler</author>
  <author email="singh@toposens.com">Adi Singh</author>
  <author email="lang@toposens.com">Christopher Lang</author>

  <license>BSD</license>
  <url type="website">TBD</url>
  <url type="repository">TBD</url>
  <url type="bugtracker">TBD</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>toposens_msgs</exec_depend>
	<exec_depend>toposens_driver</exec_depend>
  <exec_depend>toposens_markers</exec_depend>
  <exec_depend>toposens_pointcloud</exec_depend>

  <export>
    <metapackage/>
  </export> 
</package>
