<?xml version="1.0"?>
<package format="2">
  <name>toposens_description</name>
  <version>0.9.2</version>
  <description>3D models of the sensor for visualization.</description>

  <maintainer email="singh@toposens.com">Adi Singh</maintainer>
  <author email="dengler@toposens.com">Sebastian Dengler</author>
  <author email="singh@toposens.com">Adi Singh</author>

  <license>BSD</license>
  <url type="website">TBD</url>
  <url type="repository">TBD</url>
  <url type="bugtracker">TBD</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

</package>
