<?xml version="1.0"?>
<package format="2">
  <name>toposens_markers</name>
  <version>0.9.2</version>
  <description>Rviz integration for TS sensor data.</description>
  
  <maintainer email="singh@toposens.com">Adi Singh</maintainer>
  <author email="dengler@toposens.com">Sebastian Dengler</author>
  <author email="singh@toposens.com">Adi Singh</author>

  <license>BSD</license>
  <url type="website">TBD</url>
  <url type="repository">TBD</url>
  <url type="bugtracker">TBD</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>toposens_msgs</depend>
  <depend>rviz_visual_tools</depend>
  <depend>toposens_driver</depend>
  <depend>message_runtime</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>
