<?xml version="1.0"?>
<package format="2">
  <name>toposens_msgs</name>
  <version>0.9.2</version>
  <description>ROS message definitions for TS sensors.</description>

  <maintainer email="singh@toposens.com">Adi Singh</maintainer>
  <author email="dengler@toposens.com">Sebastian Dengler</author>
  <author email="singh@toposens.com">Adi Singh</author>

  <license>BSD</license>
  <url type="website">TBD</url>
  <url type="repository">TBD</url>
  <url type="bugtracker">TBD</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
	<exec_depend>message_runtime</exec_depend>
  
</package>
